[gd_scene load_steps=11 format=3 uid="uid://blxk4ex3fpwq8"]

[ext_resource type="Script" path="res://city_mode/Cities/Geraldina/crafting/recipe.gd" id="1_c3sk5"]
[ext_resource type="PackedScene" uid="uid://douwpwsc16lq5" path="res://city_mode/Cities/Geraldina/crafting/recipe_slot.tscn" id="1_d288w"]
[ext_resource type="Resource" uid="uid://bf6q272lgp3nh" path="res://inventory/global_inventory.tres" id="2_40380"]
[ext_resource type="Texture2D" path="res://GUI/inventory/new_assets/sprait_craft.png" id="4_0od4a"]

[sub_resource type="Theme" id="Theme_7g0g1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f13qm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0e5s3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tafv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ml0p0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plc14"]

[node name="Recipe" type="HBoxContainer"]
offset_right = 88.0
offset_bottom = 40.0
script = ExtResource("1_c3sk5")
global_inventory = ExtResource("2_40380")

[node name="RecipeSlot" parent="." instance=ExtResource("1_d288w")]
layout_mode = 2

[node name="RecipeSlot2" parent="." instance=ExtResource("1_d288w")]
layout_mode = 2

[node name="CraftResult" type="Button" parent="."]
light_mask = 0
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_7g0g1")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxEmpty_f13qm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0e5s3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tafv3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ml0p0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_plc14")
disabled = true
shortcut_in_tooltip = false
icon_alignment = 1

[node name="back" type="Sprite2D" parent="CraftResult"]
show_behind_parent = true
position = Vector2(20, 19)
scale = Vector2(1.31818, 1.36364)
texture = ExtResource("4_0od4a")
vframes = 2

[node name="OpenDescription" type="Button" parent="CraftResult"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="CraftResult" to="." method="_on_craft_result_pressed"]
[connection signal="pressed" from="CraftResult/OpenDescription" to="." method="_on_open_description_pressed"]
